# story-rs

./: .env  Cargo.toml  README.md
config/: config.toml
migrations/: 20210322154348_user.sql  20210410151158_story.sql  20210410151713_story_body.sql
src/: main.rs
src/application/: Cargo.toml
src/application/src/: main.rs
src/builder/: builder.rs  mod.rs  page.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/api/: api.rs  error.rs  mod.rs  status.rs
src/common/src/hash/: crypt.rs  mod.rs
src/common/src/jwt/: auth.rs  jwt.rs
src/common/src/state/: mod.rs
src/db/: Cargo.toml
src/db/src/: lib.rs
src/db/src/builder/: builder.rs  convert.rs  mod.rs
src/db/src/models/: mod.rs  stories.rs  users.rs
src/models/: users.rs
src/query/: builder.rs  convert.rs  insert.rs  mod.rs  select.rs
src/setting/: setting.rs
src/state/: mod.rs
src/stories/: handlers.rs  mod.rs
src/users/: handlers.rs  mod.rs  schema.rs
src/util/: api.rs  auth.rs  crypt.rs  date_format.rs  error.rs  jwt.rs  mod.rs  status.rs
src/web/: Cargo.toml
src/web/src/: lib.rs
src/web/src/stories/: handlers.rs  mod.rs
src/web/src/users/: handlers.rs  mod.rs  schema.rs
