[package]
name = "story-rs"
version = "0.1.0"
authors = ["wangju <wowiwj@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
config = "0.11"
sqlx = { version = "0.5.1", features = ["mysql", "chrono", "sqlite", "runtime-async-std-native-tls"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
validator = { version = "0.13", features = ["derive"] }
anyhow = "1.0"
rust-argon2 = "0.8"
rand = "0.7.3"
base64 = "0.12.3"
jsonwebtoken = "7"
quaint = { version = "0.2.0-alpha.13", features = ["mysql","chrono"] }
lettre = "0.10.0-beta.3"


