[package]
name = "story-application"
version = "0.1.0"
authors = ["wangju <wangju@shein.com>"]
edition = "2018"


[[bin]]
name = "story_application"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package = "story-common", path = "../../src/common" }
db = { package = "story-db", path = "../../src/db" }
web = { package = "story-web", path = "../../src/web" }

tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }

