[package]
name = "story-application"
version = "0.1.0"
authors = ["wangju <wangju@qq.com>"]
edition = "2018"


[[bin]]
name = "story_application"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
failure = {version = "0.1.8", features = ["derive"] }
diesel = { version = "1.4.6", features = ["postgres"] }
serde = { version = "1.0.125", features = ["derive"] }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
default-features = false
features=["json", "diesel_postgres_pool"]

