[package]
name = "story-common"
version = "0.1.0"
authors = ["wangju <wangju@shein.com>"]
edition = "2018"


[lib]
name = "story_common"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.1", features = ["mysql", "chrono", "sqlite", "runtime-async-std-native-tls"] }
tide = "0.16.0"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
rust-argon2 = "0.8"
rand = "0.7.3"
base64 = "0.12.3"
jsonwebtoken = "7"


