[package]
name = "story-db"
version = "0.1.0"
authors = ["wangju <wangju@shein.com>"]
edition = "2018"


[lib]
name = "story_db"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.1", features = ["mysql", "chrono", "sqlite", "runtime-async-std-native-tls"] }
quaint = { version = "0.2.0-alpha.13", features = ["mysql", "chrono"] }
common = { package = "story-common", path = "../../src/common" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"



