[package]
name = "story-web"
version = "0.1.0"
authors = ["wangju <wowiwj@qq.com>"]
edition = "2018"

[lib]
name = "story_web"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { package = "story-db", path = "../../src/db" }
common = { package = "story-common", path = "../../src/common" }
quaint = { version = "0.2.0-alpha.13", features = ["mysql", "chrono"] }
tide = "0.16.0"
chrono = { version = "0.4.19", features = ["serde"] }
validator = { version = "0.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.1", features = ["mysql", "chrono", "sqlite", "runtime-async-std-native-tls"] }



